// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component with no explicit title renders fields as horizontal title 1`] = `<DocumentFragment />`;

exports[`Title component with no explicit title renders fields as vertical title 1`] = `<DocumentFragment />`;

exports[`Title component with title set renders horizontal title 1`] = `
<DocumentFragment>
  <text
    class="chart-it axis-title"
    transform="translate(470, 495)"
  >
    horizontal
  </text>
</DocumentFragment>
`;

exports[`Title component with title set renders vertical title 1`] = `
<DocumentFragment>
  <text
    class="chart-it axis-title"
    transform="translate(0, 230)rotate(270)"
  >
    vertical
  </text>
</DocumentFragment>
`;
